tests/ui/stability-attribute/suggest-vec-allocator-api.stderr
error[E0658]: use of unstable library feature 'allocator_api'
  --> $DIR/suggest-vec-allocator-api.rs:2:20
   |
LL |     let _: Vec<u8, _> = vec![];
   |                ----^
   |                |
   |                help: consider wrapping the inner types in tuple: `(u8, _)`
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'allocator_api'
  --> $DIR/suggest-vec-allocator-api.rs:6:9
   |
LL |         _> = vec![];
   |         ^
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable
help: consider wrapping the inner types in tuple
   |
LL ~     let _: Vec<(
LL +         String,
LL ~         _)> = vec![];
   |

error[E0658]: use of unstable library feature 'allocator_api'
  --> $DIR/suggest-vec-allocator-api.rs:8:26
   |
LL |     let _boxed: Box<u32, _> = Box::new(10);
   |                          ^
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'allocator_api'
  --> $DIR/suggest-vec-allocator-api.rs:7:24
   |
LL |     let _ = Vec::<u16, _>::new();
   |                   -----^
   |                   |
   |                   help: consider wrapping the inner types in tuple: `(u16, _)`
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
